<resources>
    <string name="app_name">Registro de Quilometro e Viagens</string>
    <string name="title_activity_login">Primeiro Acesso ao Registro de KM</string>
    <string name="prompt_email">Matrícula</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Avançar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="msg_BoasVindas">Olá,</string>
    <string name="veiculo">Veículo:</string>
    <string name="msg_ultimaQuilometragem">Última Quilometragem:</string>
    <string name="tvEditTextKmHoje">Quilometro de hoje:</string>
    <string name="tvRadioGroupExpediente">Este km se refere a:</string>

    <!-- Lista Km-->

    <string name="tvKmPercorridoHoje">Percurso diário</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_historicoKm">Histórico de Quilometros</string>
    <string name="menu_abastecimento">Abastecimentos</string>
    <string name="menu_share">Share</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
