<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homePrincipal"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_historicoQuilometro"
            android:icon="@drawable/ic_menu_historico_km"
            android:title="@string/menu_historicoKm" />
        <item
            android:id="@+id/nav_fragment_abastecimento"
            android:icon="@drawable/ic_menu_historico_km"
            android:title="@string/menu_abastecimento" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
