<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".HomePrincipal">

    <TextView
        android:id="@+id/msg_BoasVindas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_BoasVindas"
        android:textAppearance="@style/AppTheme"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNomeColaboradorHome"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Diogo"
        android:textAppearance="@style/AppTheme"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/msg_BoasVindas"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/msg_veiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/veiculo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/msg_BoasVindas" />

    <TextView
        android:id="@+id/tvVeiculoHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="FNG-2706"
        app:layout_constraintStart_toEndOf="@+id/msg_veiculo"
        app:layout_constraintTop_toBottomOf="@id/msg_BoasVindas" />

    <TextView
        android:id="@+id/msg_ultimaQuilometragem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/msg_ultimaQuilometragem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_veiculo" />

    <TextView
        android:id="@+id/tvUltimaQuilometragem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/msg_ultimaQuilometragem"
        app:layout_constraintTop_toBottomOf="@+id/msg_veiculo" />

    <TextView
        android:id="@+id/tvRadioGroupExpediente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvRadioGroupExpediente"
        app:layout_constraintBottom_toTopOf="@id/rgExpediente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tvRadioGroupExpediente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_ultimaQuilometragem">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:hint="@string/tvEditTextKmHoje"
            android:inputType="number"
            android:maxLength="6"
            android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgExpediente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/btSalvar"
        app:layout_constraintTop_toBottomOf="@id/tvRadioGroupExpediente">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Início do expediente" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Final do expediente" />
    </RadioGroup>

    <Button
        android:id="@+id/btSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Salvar"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>